fix: NaN values + banner bottom spacing

--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,7 @@ strong {
   border: 1px solid #eaeaea;
   padding: 1rem;
   background-color: #fff;
-  height: 88px;
+  height: 100px;
   opacity: 0;
   transform: translateY(100%);
   transition: transform 0.3s ease, opacity 0.3s ease;
@@ -204,7 +204,7 @@ strong {
 .ad-content {
   display: flex;
   justify-content: space-between;
-  padding-left: 8px
+  padding-left: 8px;
 }
 
 .ad-text {
@@ -248,6 +248,7 @@ strong {
   .ad-container {
     left: auto;
     max-width: 365px;
+    height: 88px;
   }
 }
 
